--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -111,6 +111,7 @@
         <h2>{{name}}</h2>
         <h3>{{reknown}}</h3>
         <p><img src="images/artists/{{shortname}}_tn.jpg" alt="Photo of {{name}}" />{{bio}}</p>
+        <div class="clearfix"></div>
       </div>
     {{/speakers}}
   </script>
